<resources>
    <string name="app_name">Cifrado</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ingrese_la_llave">Ingrese la Llave</string>
    <string name="ingrese_la_llave_de_cifrado">Ingrese la Llave de Cifrado</string>
    <string name="buscar_archivo">Buscar Archivo</string>
    <string name="ingrese_la_llave_de_descifrado">Ingrese la Llave de Descifrado</string>
    <string name="bienvenido_para_utilizar_algun_metodo_de_cifrado_presione_la_esquina_superior_izquierda_para_seleccionar_la_ruta_donde_desea_guardar_su_archivo_cifrado_presione_la_esquina_superior_derecha_y_seleccione_una_ruta">Bienvenido para utilizar algun metodo de cifrado presione la esquina superior izquierda para seleccionar la ruta donde desea guardar su archivo cifrado presione la esquina superior derecha y seleccione una ruta</string>
    <string name="seleccione_un_archivo_para_codificar">Seleccione un Archivo para Codificar:</string>
    <string name="ingrese_las_llaves_de_descifrado">Ingrese las Llaves de Descifrado</string>
    <string name="ingrese_las_llaves_de_cifrado">Ingrese las Llaves de Cifrado</string>
    <string name="n">n</string>
    <string name="d">d</string>
</resources>
