<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProcesoRSA">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!-- TODO: Update blank fragment layout -->

        <Button
            android:id="@+id/btnDescifrarRSA"
            android:layout_width="306dp"
            android:layout_height="34dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="186dp"
            android:background="@color/colorAccent"
            android:text="@string/buscar_archivo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/btnCifrarRSA"
            android:layout_width="306dp"
            android:layout_height="34dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="133dp"
            android:background="@color/colorAccent"
            android:text="@string/buscar_archivo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/txtKey1"
            android:layout_width="146dp"
            android:layout_height="36dp"
            android:layout_alignBottom="@+id/txtKey2"
            android:layout_alignStart="@+id/btnDescifrarRSA"
            android:background="#140689b4"
            android:ems="10"
            android:inputType="number" />

        <EditText
            android:id="@+id/txtKey2"
            android:layout_width="147dp"
            android:layout_height="35dp"
            android:layout_alignEnd="@+id/btnDescifrarRSA"
            android:layout_alignParentTop="true"
            android:layout_marginTop="85dp"
            android:background="#140689b4"
            android:ems="10"
            android:inputType="number" />

        <EditText
            android:id="@+id/txtKeyDescifrado1"
            android:layout_width="148dp"
            android:layout_height="38dp"
            android:layout_alignEnd="@+id/btnDescifrarRSA"
            android:layout_alignTop="@+id/txtKeyDescifrado2"
            android:background="#140689b4"
            android:ems="10"
            android:inputType="number" />

        <EditText
            android:id="@+id/txtKeyDescifrado2"
            android:layout_width="148dp"
            android:layout_height="38dp"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/btnDescifrarRSA"
            android:layout_marginBottom="226dp"
            android:background="#140689b4"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/lblDescifrado"
            android:layout_width="306dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="280dp"
            android:text="@string/ingrese_las_llaves_de_descifrado" />

        <TextView
            android:id="@+id/lblCifrado"
            android:layout_width="306dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/btnDescifrarRSA"
            android:layout_marginTop="46dp"
            android:text="@string/ingrese_las_llaves_de_cifrado" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="274dp"
            android:layout_marginStart="110dp"
            android:text="@string/n" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/textView2"
            android:layout_marginEnd="108dp"
            android:text="@string/d" />

    </RelativeLayout>

</FrameLayout>