<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProcesoSDES">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fadeScrollbars="true"
            android:orientation="vertical"
            android:scrollbarAlwaysDrawHorizontalTrack="false"
            android:scrollbarAlwaysDrawVerticalTrack="true" />

        <TextView
            android:id="@+id/lblKey"
            layout_constraintBottom_toTopOf="@+id/txtKey"
            android:layout_width="309dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/btnDescifrarSDES"
            android:layout_marginStart="1dp"
            android:layout_marginTop="60dp"
            android:text="@string/ingrese_la_llave_de_cifrado"
            app:layout_constraintBottom_toTopOf="@+id/txtNivel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.181"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread_inside" />

        <Button
            android:id="@+id/btnDescifrarSDES"
            android:layout_width="306dp"
            android:layout_height="34dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="151dp"
            android:background="@color/colorAccent"
            android:text="@string/buscar_archivo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/btnCifrarSDES"
            android:layout_width="306dp"
            android:layout_height="34dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="133dp"
            android:background="@color/colorAccent"
            android:text="@string/buscar_archivo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/lblKeyDescifrado"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.506"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.158"
            android:layout_width="305dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/ingrese_la_llave_de_descifrado" />

        <EditText
            android:id="@+id/txtKey"
            android:layout_width="310dp"
            android:layout_height="29dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="90dp"
            android:background="#140689b4"
            android:ems="10"
            android:inputType="numberSigned" />

        <EditText
            android:id="@+id/txtKeyDescifrado"
            android:layout_width="310dp"
            android:layout_height="29dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="201dp"
            android:background="#140689b4"
            android:ems="10"
            android:inputType="numberSigned" />

    </RelativeLayout>


</FrameLayout>